# schema_creator

./: CSVToJson.py  Collibra data copy.csv  JsonToCSV.py  README.md  c2j.csv  c2j.json  complex_data.csv  csv_to_json.py  csvjson.py  csvjsonlib.py  data.csv  data.json  data_3.json  input.1.1.csv  input.1.csv  input.csv  j2c.csv  j2c.json  j2c_t.csv  json_to_csv.py  output-expected.json  output.json  output_.csv  output_07_10_2023_07_58_41.csv  output_array_included.json  ovfund-x-collibra.json  ovfund.csv  ovfund.json  pyproject.toml  requirements.txt  sc_7.py  schema_creator_2.py  schema_creator_2_test.py  schema_creator_3.py  schema_creator_4.py  schema_creator_5.py  schema_creator_6.py
