[build-system]
requires = ["pytest-runner"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "csv-to-json"
version = "0.1.0"
description = "Convert CSV to JSON"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
